// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering pristine horizontalConstraint with constraint input should match snapshot 1`] = `
<div
  className="container constraintXs"
>
  <input
    className="pristine"
    contentEditable={true}
    name="numeric-field1"
    onChange={[Function]}
    role="textbox"
    type="number"
    value="1"
  />
</div>
`;

exports[`rendering pristine horizontalConstraint without constraint input should match snapshot 1`] = `
<div
  className="container constraintScale"
>
  <input
    className="pristine"
    contentEditable={true}
    name="numeric-field1"
    onChange={[Function]}
    role="textbox"
    type="number"
    value="1"
  />
</div>
`;

exports[`rendering pristine horizontalConstraint without constraint should match snapshot 1`] = `
<NumberInput
  horizontalConstraint="scale"
  name="numeric-field1"
  onChange={[Function]}
  value="1"
/>
`;
